✏️ fix digitalText UI not centered

--- a/public/index.css
+++ b/public/index.css
@@ -161,6 +161,10 @@
     content: '°C';
 }
 
+.digital-status-text{
+    margin: auto 0;
+}
+
 .digital-status-value{
     border-radius: var(--small);
 }
